--- a/translations/kangyur/translations/046-001_toh95_play_in_full.xml
+++ b/translations/kangyur/translations/046-001_toh95_play_in_full.xml
@@ -31,7 +31,7 @@
                     daughter, and son</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 4.48.13 <date>2023</date>
+                <edition>v 4.48.14 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -67,7 +67,7 @@
 
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-19T11:40:40.36Z" user="admin">19/07/2023 11:40:40</note>
+                <note type="lastUpdated" date-time="2023-07-19T18:58:51.331Z" user="admin">19/07/2023 18:58:51</note>
                 <note type="updated" update="translation-status" value="1" date-time="2013-05-22T12:00:00.000Z" user="admin">Note added retrospectively based on publication date</note>
                 <note type="updated" update="translation-status" value="1.a" date-time="2013-05-22T12:00:00.000Z" user="admin">Note added retrospectively based on publication date</note>
                 <note type="updated" update="text-version" value="v 4.41" date-time="2019-06-18T02:38:10.693Z" user="celso">v 4.41 2019</note>
@@ -109,6 +109,7 @@
                 <note type="updated" update="text-version" value="4.48.11" date-time="2023-04-19T12:28:43.153Z" user="celso">Corrected @type values for Skt. attestation to match the new code in the schema.</note>
                 <note type="updated" update="text-version" value="4.48.12" date-time="2023-04-26T23:29:28.936Z" user="martina-cotter">Updated typo.</note>
                 <note type="updated" update="text-version" value="4.48.13" date-time="2023-07-19T11:40:37.044Z" user="john">replaced Bliss-Gone with Well-Gone.</note>
+                <note type="updated" update="text-version" value="4.48.14" date-time="2023-07-19T18:58:48.082Z" user="john">Further edits to intro and biblio following Silk 2022; more to be done.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -452,14 +453,21 @@
                         Kangyur have slipped into relative obscurity, <title xml:lang="en">The Play in Full</title> has
                         continued to have a lasting impact on Tibetan Buddhism, all the way down to the present.</tei:p>
                     <tei:milestone unit="chunk" xml:id="UT22084-046-001-25"/>
-                    <tei:p tid="32">In the West, the first mention of <title xml:lang="en">The Play in Full</title> occurred
-                        in 1839 when Alexander Csoma de Koros gave a summary in his <title xml:lang="en">Analysis of the
-                            Mdo</title> (Calcutta, pp. 288-296). Eugène Burnouf also mentioned this text in his <title xml:lang="fr">Introduction à l’histoire du Bouddhisme Indien</title> published in 1844. The
-                        first efforts toward a translation of <title xml:lang="en">The Play in Full</title> did not
-                        occur, however, until 1874 when Salomon Lefmann published a Sanskrit edition of the text, as
-                        well as a partial translation into German. Shortly thereafter further translations appeared,
-                        including an English translation by R. L. Mitra in 1875, and most influentially a full French
-                        translation by Édouard Foucaux in 1892. Almost a hundred years later, Gwendolyn Bays, who based
+                    <tei:p tid="32">In the West, the first mention of <title xml:lang="en">The Play in Full</title> 
+                        may have been the chapter-by-chapter summary by Robert Lenz published serially (in French) in 1836. 
+                        A few years later, in 1839, Alexander Csoma de Kőrös published his own summary in <title xml:lang="en">Analysis of the
+                            Mdo</title> (Calcutta, pp. 288-296). Eugène Burnouf also mentioned this text in his 
+                        <title xml:lang="fr">Introduction à l’histoire du Bouddhisme Indien</title> published in 1844. 
+                        In 1847, Phillipe Édouard Foucaux published an edition of the Tibetan, and his initial French translation, made from the Tibetan
+                        but with reference to the Sanskrit (the first ever translation of <title xml:lang="en">The Play in Full</title>) appeared in 1848. 
+                        An edition of the Sanskrit by Rajendralal Mitra began to appear over two decades starting in 1853, 
+                        and in 1874 Salomon Lefmann published a partial translation into German.
+                        An English translation by Mitra began to appear in 1881, and in 1882 Lefman published his 
+                        edition of the Sanskrit. Shortly thereafter in 1884, Foucaux published 
+                        his second French translation, this time from the Sanskrit, followed by 
+                        a further volume of notes in 1892.<note place="end" xml:id="UT22084-046-001-3335">We are grateful to Jonathan Silk
+                        (Silk 2022, p. 273 n15) for pointing out a number of errors and omissions in an earlier version
+                        of this paragraph.</note> Almost a hundred years later, Gwendolyn Bays, who based
                         her work on Foucaux’s translation with reference to the original Sanskrit and Tibetan, published
                         a complete translation in English.</tei:p>
                     <tei:milestone unit="chunk" xml:id="UT22084-046-001-26"/>
@@ -467,7 +475,7 @@
                         previous scholars. Unlike earlier translations, however, we have based our translation on the
                         Tibetan text as found in the Degé Kangyur (Toh 95), with reference to the other available
                         Kangyur editions. In addition we have also compared the Tibetan translation line by line with
-                        the Sanskrit (Lefmann 1874), and we have revised the translation on numerous occasions where the
+                        the Sanskrit (Lefmann 1882), and we have revised the translation on numerous occasions where the
                         Sanskrit clarified obscure passages in the Tibetan version or represented a preferred
                         reading.</tei:p>
                     <tei:milestone unit="chunk" xml:id="UT22084-046-001-27"/>
@@ -19290,22 +19298,46 @@
                         ste gnas kyi bka’ bstan dpe sdur khang (The Tibetan Tripitaka Collation Bureau of the China
                         Tibetology Research Center). 108 volumes. Beijing: krung go’i bod rig pa dpe skrun khang (China
                         Tibetology Publishing House), 2006–2009, vol 46, pp. 3–434.</bibl>
-                    <bibl xml:id="UT22084-046-001-2331">Lefmann, Salomon (1874). <title xml:lang="de">Lalitavistara:
-                            Erzählung von dem Leben und der Lehre des Çâkya Simha</title>. Berlin: Dümmler, 1874.</bibl>
+                    <bibl xml:id="UT22084-046-001-3336">Foucaux, Phillipe Édouard. <title xml:lang="fr">Rgya Tch’er Rol Pa 
+                        ou Développement des Jeux, Contenant l’Histoire du Bouddha Çakya-mouni. Première Partie—Texte Tibétain</title>. Paris: Imprimerie Royale, 1847.</bibl>
+                    <bibl xml:id="UT22084-046-001-2335">Lefmann, Salomon. <title xml:lang="Sa-Ltn">Lalita
+                            Vistara</title>. Halle: Verlag der Buchhandlung des Waisenhauses, 1882.</bibl>
+                    <bibl xml:id="UT22084-046-001-2535">Mitra, R. L. (1853–1877). <title xml:lang="en">The Lalita Vistara or 
+                        Memoirs of the Early Life of S’a’kya Siñha</title>. Bibliotheca Indica: A Collection of Oriental Works, 
+                        Old Series, nos. 51, 73, 143, 144, 145, 237. Calcutta: Asiatic Society of Bengal, 1853–1877.</bibl>
                 </div>
                 <div type="section" xml:id="UT22084-046-001-listBibl-2">
                     <head type="section" tid="3164">Secondary Sources</head>
                     <bibl xml:id="UT22084-046-001-2332">Bays, Gwendolyn. <title xml:lang="en">The Voice of the Buddha,
                             The Beauty of Compassion: The Lalitavistara Sutra</title>. Tibetan Translation Series, vol.
                         2. Berkeley, CA: Dharma Publishing, 1983.</bibl>
-                    <bibl xml:id="UT22084-046-001-2333">Foucaux, Édouard. <title xml:lang="fr">Le Lalitavistara :
-                            l’histoire traditionnelle de la vie du Bouddha Çakyamuni</title>. Les Classiques du
-                        bouddhisme mahāyāna, Musée National des Arts Asiatiques Guimet, vol. 19. Paris: Ernest Leroux,
-                        1892.</bibl>
-                    <bibl xml:id="UT22084-046-001-2335">Lefmann, Salomon. <title xml:lang="Sa-Ltn">Lalita
-                            Vistara</title>. Halle: Verlag der Buchhandlung des Waisenhauses, 1882.</bibl>
-                    <bibl xml:id="UT22084-046-001-2336">Mitra, R. L. (1875) <title xml:lang="en">The Lalita
-                            Vistara</title>. Delhi: Sri Satguru Publications, 1998.</bibl>
+                    <bibl xml:id="UT22084-046-001-3333">Foucaux, Phillipe Édouard (1848). <title xml:lang="fr">Rgya Tch’er Rol Pa 
+                        ou Développement des Jeux, Contenant l’Histoire du Bouddha Çakya-mouni: Traduit sur la version 
+                        Tibétaine du Bkahhgyour, et revu sur l’original Sanscrit (Lalitavistara)</title>. Paris: 
+                        Imprimerie Nationale, 1848.</bibl>
+                    <bibl xml:id="UT22084-046-001-3334">———— (1870). <title xml:lang="fr">Étude sur le Lalita Vistara pour une 
+                        édition critique du texte sanskrit, précédée d’ un coup d’oeil sur la publication des livres 
+                        bouddhiques en Europe et dans l’Inde</title>. Paris: Maisonneuve, 1870.</bibl>
+                    <bibl xml:id="UT22084-046-001-2338">———— (1884). <title xml:lang="fr">Le Lalitavistara, Développement des Jeux:
+                        l’histoire traditionnelle de la vie du Bouddha Çakyamuni</title>. Première partie. Annales du Musée Guimet, vol. 6 
+                        Paris: Ernest Leroux, 1884.</bibl>
+                    <bibl xml:id="UT22084-046-001-2333">———— (1892). <title xml:lang="fr">Le Lalitavistara, Développement des Jeux:
+                        l’histoire traditionnelle de la vie du Bouddha Çakyamuni</title>. Seconde partie: notes, variantes, et index. 
+                        Annales du Musée Guimet, vol. 19. Paris: Ernest Leroux, 1892. </bibl>
+                    <bibl xml:id="UT22084-046-001-2331">Lefmann, Salomon (1874). <title xml:lang="de">Lalitavistara:
+                            Erzählung von dem Leben und der Lehre des Çâkya Simha</title>. Berlin: Dümmler, 1874.</bibl>
+                    <bibl xml:id="UT22084-046-001-2531">Lenz, Robert. “Analyse du Lalita-Vistara-Pourana, l’un des principaux 
+                        ouvrages sacrés des Bouddhistes de l’Asie centrale, contenant la vie de leur prophète, et écrit 
+                        en Sanscrit.” In <title xml:lang="fr">Bulletin Scientifique publié par l’Académie impériale des Sciences 
+                            de Saint-Pétersbourg</title>, I.7:49–51; I.8:57–63; I.9:71–72; I.10:75–78; I.11:87–88; 
+                        I.12:92–96; I.13:97–99. St. Petersburg: Académie impériale des sciences, 1836.</bibl>
+                    <bibl xml:id="UT22084-046-001-2336">Mitra, R. L. (1881–1886). <title xml:lang="en">The Lalita Vistara or 
+                        Memoirs of the Early Life of S’a’kya Siñha, Translated from the Original Sanskrit</title>. 
+                        Bibliotheca Indica: A Collection of Oriental Works, New Series, nos. 455, 473, 575. Calcutta: 
+                        Asiatic Society of Bengal, 1881–1886. Republished, Delhi: Sri Satguru Publications, 1998.</bibl>
+                    <bibl xml:id="UT22084-046-001-3531">Silk, Jonathan A. “Serious Play:
+                        Recent Scholarship on the <title xml:lang="Sa-Ltn">Lalitavistara</title>.” In 
+                        <title xml:lang="en">Indo-Iranian Journal</title> 65, pp. 267–301. Leiden: Brill, 2022.</bibl>
                     <bibl xml:id="UT22084-046-001-2334">Vaidya, P. L. <title xml:lang="Sa-Ltn">Lalitavistara</title>.
                         Buddhist Sanskrit Texts, vol. 1. Darbhanga: The Mithila Institute, 1958.</bibl>
 
@@ -19314,7 +19346,7 @@
                 </div>
                 <div type="section" xml:id="UT22084-046-001-listBibl-3">
                     <head type="section" tid="3165">Further Resources</head>
-                    <bibl xml:id="UT22084-046-001-2338">Goswami, Bijoya. <title xml:lang="Sa-Ltn">Lalitavistara</title>.
+                    <bibl xml:id="UT22084-046-001-3338">Goswami, Bijoya. <title xml:lang="Sa-Ltn">Lalitavistara</title>.
                         Bibliotheca Indica Series, vol. 320. Calcutta: The Asiatic Society, 2001.</bibl>
                     <bibl xml:id="UT22084-046-001-2339">Khosla, Sarla. <title xml:lang="en">Lalitavistara and the
                             Evolution of Buddha Legend</title>. New Delhi: Galaxy Publications, 1991.</bibl>
