--- a/translations/kangyur/translations/050-003_toh112-the_white_lotus_of_compassion.xml
+++ b/translations/kangyur/translations/050-003_toh112-the_white_lotus_of_compassion.xml
@@ -35,7 +35,7 @@
         <sponsor ref="sponsors.xml#sponsor-8">anonymous</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.2.4 <date>2023</date>
+                <edition>v 1.2.5 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -73,7 +73,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-07-20T11:25:41.087Z" user="admin">20/07/2023 11:25:41</note>
+        <note type="lastUpdated" date-time="2023-07-20T12:48:12.436Z" user="admin">20/07/2023 12:48:12</note>
         <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-22T06:04:52.426Z" user="andreas">v 0.1.0</note>
         <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:12:23.349Z" user="mike">2.d</note>
         <note type="updated" update="text-version" value="0.1.1" date-time="2021-04-15T09:04:52.552Z" user="line-tofte">Auto (update-contributors)</note>
@@ -118,6 +118,7 @@
           <note type="updated" update="text-version" value="1.2.3" date-time="2023-07-18T22:59:43.343Z" user="konchog">Several small fixes in the intro and just one comma added in biblio.</note>
           <note type="updated" update="text-version" value="1.2.2" date-time="2023-07-19T11:35:13.031Z" user="john">1.2.2</note>
           <note type="updated" update="text-version" value="1.2.4" date-time="2023-07-20T11:25:38.111Z" user="john">Various further edits prior to announcement on 21 July.</note>
+          <note type="updated" update="text-version" value="1.2.5" date-time="2023-07-20T12:48:09.461Z" user="john">Typo corrected.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -356,7 +357,7 @@
           <p tid="24">As for the Tibetan translation, we know that it was produced in the late
             eighth or early ninth century, since the text is included in the Denkarma (<foreign xml:lang="Bo-Ltn">ldan dkar ma</foreign>) 
             catalog, usually dated to c. 812 <hi rend="small-caps">ce</hi>.<note place="end" xml:id="UT22084-050-003-25">
-              Denkarma, F.396.b.7. See also Herrmann-Pfandt 2008, p. 44, no. 78.</note> According to the colophon, 
+              Denkarma, F.296.b.7. See also Herrmann-Pfandt 2008, p. 44, no. 78.</note> According to the colophon, 
             it was produced by the Tibetan translator and chief editor Yeshé Dé, 
             working with the Indian paṇḍitas Jinamitra, Surendrabodhi, and Prajñāvarman. </p>
           <tei:milestone xmlns:tei="http://www.tei-c.org/ns/1.0" unit="chunk" xml:id="UT22084-050-003-12"/>
