--- a/translations/kangyur/placeholders/091-031_toh634,874-the_incantation_of_the_one_hundred_and_eight_names_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/091-031_toh634,874-the_incantation_of_the_one_hundred_and_eight_names_of_avalokitesvara.xml
@@ -16,8 +16,13 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa spyan ras gzigs dbang phyug gi mtshan brgya rtsa brgyad pa gzungs sngags dang bcas pa/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryāvalokiteśvarāṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-091-031"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh634" type="text">
@@ -40,7 +45,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-27T13:16:35.68Z" user="celso">27/09/2021 13:16:35</note>
+                <note type="lastUpdated" date-time="2023-07-20T13:53:36.244Z" user="admin">20/07/2023 13:53:36</note>    <note type="updated" update="translation-status" value="4" date-time="2023-07-20T13:53:31.931Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-07-20T13:53:31.931Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
