--- a/translations/kangyur/translations/043-009_toh72-sutra_of_viradattas_questions.xml
+++ b/translations/kangyur/translations/043-009_toh72-sutra_of_viradattas_questions.xml
@@ -33,7 +33,7 @@
                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.7 <date>2023</date>
+                <edition>v 1.0.8 <date>2023</date>
                 </edition>
             </editionStmt>
 
@@ -68,7 +68,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-12T13:38:44.826Z" user="admin">12/07/2023 13:38:44</note>
+                <note type="lastUpdated" date-time="2023-07-20T15:24:33.01Z" user="admin">20/07/2023 15:24:33</note>
 
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-03-22T09:22:03.132Z" user="line-tofte">2.h</note>
@@ -118,6 +118,7 @@
     <note type="updated" update="text-version" value="1.0.5" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
     <note type="updated" update="text-version" value="1.0.6" date-time="2023-01-18T14:48:43.396Z" user="celso">Auto (removing-tid-from-back-list-items)</note>
     <note type="updated" update="text-version" value="1.0.7" date-time="2023-07-12T13:38:41.926Z" user="celso">Activated pending links to Toh 9</note>
+    <note type="updated" update="text-version" value="1.0.8" date-time="2023-07-20T15:24:30.145Z" user="martina-cotter">Added pending links.</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -1704,7 +1705,7 @@
                                 the gift of a robe and prophesies that he will be the next buddha, and that his
                                 companion Ajita will be the next cakravartin. As a bodhisattva, he has both these names.
                                 In <title xml:lang="en">
-                                    <ref rend="pending" target="https://read.84000.co/translation/toh112.html">Karuṇāpuṇḍarīkasūtra</ref>
+                                    <ref target="https://read.84000.co/translation/toh112.html">Karuṇāpuṇḍarīkasūtra</ref>
                                 </title> (Toh 112), the Buddha Ratnagarbha
                                 prophesies that Vimalavaiśayana, the fourth of the thousand young Vedapāṭhaka pupils of
                                 Samudrareṇu, will be the Buddha Maitreya.</term>
