--- a/translations/kangyur/translations/043-009_toh72-sutra_of_viradattas_questions.xml
+++ b/translations/kangyur/translations/043-009_toh72-sutra_of_viradattas_questions.xml
@@ -33,7 +33,7 @@
                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.8 <date>2023</date>
+                <edition>v 1.0.9 <date>2023</date>
                 </edition>
             </editionStmt>
 
@@ -68,7 +68,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-20T15:24:33.01Z" user="admin">20/07/2023 15:24:33</note>
+                <note type="lastUpdated" date-time="2023-07-20T16:06:53.981Z" user="admin">20/07/2023 16:06:53</note>
 
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-03-22T09:22:03.132Z" user="line-tofte">2.h</note>
@@ -119,6 +119,7 @@
     <note type="updated" update="text-version" value="1.0.6" date-time="2023-01-18T14:48:43.396Z" user="celso">Auto (removing-tid-from-back-list-items)</note>
     <note type="updated" update="text-version" value="1.0.7" date-time="2023-07-12T13:38:41.926Z" user="celso">Activated pending links to Toh 9</note>
     <note type="updated" update="text-version" value="1.0.8" date-time="2023-07-20T15:24:30.145Z" user="martina-cotter">Added pending links.</note>
+    <note type="updated" update="text-version" value="1.0.9" date-time="2023-07-20T16:06:51.074Z" user="martina-cotter">Added pending links. Toh 112</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -1202,7 +1203,7 @@
                     <bibl xml:id="UT22084-043-009-156">
                         <title xml:lang="Bo-Ltn">snying rje pad ma dkar po’i mdo</title>
                         (<title xml:lang="Sa-Ltn">Karuṇāpuṇḍarīkasūtra</title>). Toh 112, Degé Kangyur vol. 50 (mdo
-                        sde, cha), folios 129.a–297.a. </bibl>
+                        sde, cha), folios 129.a–297.a. English translation in <ref target="https://read.84000.co/translation/toh112">Roberts 2023</ref>. </bibl>
                     <bibl xml:id="UT22084-043-009-157">
                         <title xml:lang="Bo-Ltn">dri med grags pas bstan pa</title>
                             (<title xml:lang="Sa-Ltn">Vimalakīrtinirdeśa</title>). Toh 176, Degé Kangyur vol. 60 (mdo
@@ -1257,6 +1258,10 @@
                     </bibl>
                     <bibl xml:id="UT22084-043-009-170">Phangthangma (<title xml:lang="Bo-Ltn">dkar chag ’phang thang ma
                             / sgra sbyor bam po gnyis pa</title>). Beijing: mi rigs dpe skrun khang. 2003.</bibl>
+                    <bibl xml:id="UT22084-043-009-273">Roberts, Peter Alan. trans. <title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh112">The White Lotus of Compassion</ref>
+                        </title> (<title xml:lang="Sa-Ltn">Karuṇā­puṇḍarīka­nāma­mahā­yāna­sūtra</title>), Toh 112. 84000:
+                        Translating the Words of the Buddha, 2023.</bibl>
                     <bibl xml:id="UT22084-043-009-171">
                         <ref target="http://idp.bl.uk/database/oo_loader.a4d?pm=IOL%20Tib%20J%20184;img=1">IOL Tib J
                             184</ref>. British Library, London. Accessed through The International Dunhuang Project: The
