--- a/translations/kangyur/translations/051-004_toh116_baskets_display.xml
+++ b/translations/kangyur/translations/051-004_toh116_baskets_display.xml
@@ -32,7 +32,7 @@
                 <sponsor ref="sponsors.xml#sponsor-31">Tony Leung Chiu Wai and family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 2.47.28 <date>2021</date>
+                <edition>v 2.47.29 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -69,7 +69,7 @@
 
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-20T15:26:55.516Z" user="admin">20/07/2023 15:26:55</note>
+                <note type="lastUpdated" date-time="2023-07-20T16:08:07.47Z" user="admin">20/07/2023 16:08:07</note>
                 <note type="updated" update="translation-status" value="1" date-time="2013-05-22T12:00:00.000Z" user="admin">Note added retrospectively
                     based on publication date</note>
                 <note type="updated" update="translation-status" value="1.a" date-time="2013-05-22T12:00:00.000Z" user="admin">Note added retrospectively
@@ -128,6 +128,7 @@
                     (remove-tid-from-back-list-items)</note>
                 <note type="updated" update="text-version" value="2.47.27" date-time="2023-03-07T16:12:09.285Z" user="martina-cotter">Updated typo.</note>
                 <note type="updated" update="text-version" value="2.47.28" date-time="2023-07-20T15:26:52.348Z" user="martina-cotter">Added pending links. Toh 112</note>
+                <note type="updated" update="text-version" value="2.47.29" date-time="2023-07-20T16:08:04.278Z" user="martina-cotter">Added pending links. Toh 112</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -4943,8 +4944,9 @@
                     <bibl xml:id="UT22084-051-004-296">Rhys Davids, T.W. and William Stede, eds.
                             <title xml:lang="en">The Pali Text Society’s Pali-English
                             Dictionary.</title> London: Pali Text Society, 1979.</bibl>
-                    <bibl xml:id="UT22084-051-004-297">Roberts, Peter Alan, trans. <title xml:lang="en">The White Lotus of Compassion</title> (<title xml:lang="Bo-Ltn">snying rje pad ma dkar po zhes bya ba theg pa chen
-                        po’i mdo</title>, <title xml:lang="Sa-Ltn">Karuṇā­puṇḍarīka­nāma­mahā­yāna­sūtra</title>), Toh 112. 84000:
+                    <bibl xml:id="UT22084-051-004-1100">Roberts, Peter Alan. trans. <title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh112">The White Lotus of Compassion</ref>
+                        </title> (<title xml:lang="Sa-Ltn">Karuṇā­puṇḍarīka­nāma­mahā­yāna­sūtra</title>), Toh 112. 84000:
                         Translating the Words of the Buddha, 2023.</bibl>
                     <!--I think this is supposed to be Toh 113. See RRWorksheet "Published. When Toh 112 is published see if there is a chapter 
                         in it dedicated to Mahāsthāmaprāpta (mthu chen thob). If there isn't, change this bibl Toh 113 and update i.6, n.5, and 
