--- a/translations/kangyur/translations/061-006_toh186_miracle_of_attaining_the_buddhas_powers.xml
+++ b/translations/kangyur/translations/061-006_toh186_miracle_of_attaining_the_buddhas_powers.xml
@@ -26,7 +26,7 @@
                 <consultant role="projectManager" ref="contributors.xml#person-27">Gregory Forgues</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.33.23 <date>2023</date>
+                <edition>v 1.33.24 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -58,7 +58,7 @@
 
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-12T14:22:28.205Z" user="admin">12/07/2023 14:22:28</note>
+                <note type="lastUpdated" date-time="2023-07-20T16:09:04.358Z" user="admin">20/07/2023 16:09:04</note>
                 <note type="updated" update="translation-status" value="1" date-time="2016-05-30T12:00:00.000Z" user="admin">Note added retrospectively based on publication date</note>
                 <note type="updated" update="translation-status" value="1.a" date-time="2016-05-30T12:00:00.000Z" user="admin">Note added retrospectively based on publication date</note>
                 <note type="updated" update="text-version" value="v 1.31" date-time="2019-06-18T16:17:31.913Z" user="celso">v 1.31 2019</note>
@@ -102,6 +102,7 @@
     <note type="updated" update="text-version" value="1.33.21" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
     <note type="updated" update="text-version" value="1.33.22" date-time="2023-02-15T18:59:51.039Z" user="martina-cotter">Added pending links.</note>
     <note type="updated" update="text-version" value="1.33.23" date-time="2023-07-12T14:22:25.271Z" user="celso">Added pending links, regularized the format of notes with all the links</note>
+    <note type="updated" update="text-version" value="1.33.24" date-time="2023-07-20T16:09:01.49Z" user="martina-cotter">Added pending links. Toh 112</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -242,7 +243,10 @@
                                     Dharmachakra Translation Committee, trans. <title xml:lang="en">
                                         <tei:ref target="https://read.84000.co/translation/toh94.html">The Good Eon</tei:ref>
                                     </title>, Toh 94 (2022).</note> <title xml:lang="Sa-Ltn">Saṃghāṭi­sūtra­dharma­paryāya</title>
-                        (Toh 102)<tei:ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh102.html"/>, <title xml:lang="Sa-Ltn">Karuṇā­puṇḍarīka</title> (Toh 112)<tei:ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh112.html"/>, <title xml:lang="Sa-Ltn">Saddharma­puṇḍarīka</title> (Toh
+                        (Toh 102)<tei:ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh102.html"/>, <title xml:lang="Sa-Ltn">Karuṇā­puṇḍarīka</title> (Toh 112),
+                        <note place="end" xml:id="UT22084-061-006-298">See Roberts, Peter Alan. trans. <title xml:lang="en">
+                            <tei:ref target="https://read.84000.co/translation/toh112.html">The White Lotus of Compassion</tei:ref>
+                        </title>, Toh 112 (2023).</note> <title xml:lang="Sa-Ltn">Saddharma­puṇḍarīka</title> (Toh
                             113),<note place="end" xml:id="UT22084-061-006-265">See Peter Alan Roberts, trans. <title xml:lang="en">
                                 <tei:ref target="https://read.84000.co/translation/toh113.html">The White Lotus of the Good Dharma</tei:ref>
                             </title>, Toh 113 (2018b).</note>
@@ -1272,6 +1276,11 @@
                             <tei:ref target="https://read.84000.co/translation/toh113.html">The White Lotus of the Good Dharma</tei:ref>
                         </title> (<title xml:lang="Sa-Ltn">Saddharma­puṇḍarīka</title>, Toh 113). 84000: Translating the Words of the Buddha,
                         2018.</bibl>
+                    <bibl xml:id="UT22084-061-006-299">———(2023), trans. <title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh112.html">The White Lotus of Compassion</ref>
+                        </title> 
+                        (<title xml:lang="Sa-Ltn">Karuṇā­puṇḍarīka­nāma­mahā­yāna­sūtra</title>), Toh 112. 84000:
+                        Translating the Words of the Buddha, 2023.</bibl>
                     <bibl xml:id="UT22084-061-006-123">Rotman, Andy, trans. <title xml:lang="en">Divine Stories: Divyāvadāna</title>, Part 1. Boston:
                         Wisdom Publications, 2008.</bibl>
                     <bibl xml:id="UT22084-061-006-124">Rahula, Walpola. <title xml:lang="en">Abhidharmasamuccaya: The Compendium of Higher Teaching
