--- a/translations/kangyur/translations/061-006_toh186_miracle_of_attaining_the_buddhas_powers.xml
+++ b/translations/kangyur/translations/061-006_toh186_miracle_of_attaining_the_buddhas_powers.xml
@@ -26,7 +26,7 @@
                 <consultant role="projectManager" ref="contributors.xml#person-27">Gregory Forgues</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.33.24 <date>2023</date>
+                <edition>v 1.33.25 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -58,7 +58,7 @@
 
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-20T16:09:04.358Z" user="admin">20/07/2023 16:09:04</note>
+                <note type="lastUpdated" date-time="2023-07-20T16:10:42.414Z" user="admin">20/07/2023 16:10:42</note>
                 <note type="updated" update="translation-status" value="1" date-time="2016-05-30T12:00:00.000Z" user="admin">Note added retrospectively based on publication date</note>
                 <note type="updated" update="translation-status" value="1.a" date-time="2016-05-30T12:00:00.000Z" user="admin">Note added retrospectively based on publication date</note>
                 <note type="updated" update="text-version" value="v 1.31" date-time="2019-06-18T16:17:31.913Z" user="celso">v 1.31 2019</note>
@@ -103,6 +103,7 @@
     <note type="updated" update="text-version" value="1.33.22" date-time="2023-02-15T18:59:51.039Z" user="martina-cotter">Added pending links.</note>
     <note type="updated" update="text-version" value="1.33.23" date-time="2023-07-12T14:22:25.271Z" user="celso">Added pending links, regularized the format of notes with all the links</note>
     <note type="updated" update="text-version" value="1.33.24" date-time="2023-07-20T16:09:01.49Z" user="martina-cotter">Added pending links. Toh 112</note>
+    <note type="updated" update="text-version" value="1.33.25" date-time="2023-07-20T16:10:39.545Z" user="martina-cotter">Added pending links. Toh 112</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
