--- a/translations/kangyur/translations/066-015_toh257-the_sutra_of_the_quintessence_of_the_sun.xml
+++ b/translations/kangyur/translations/066-015_toh257-the_sutra_of_the_quintessence_of_the_sun.xml
@@ -33,7 +33,7 @@
         <sponsor ref="sponsors.xml#sponsor-121">Manju Sun and Jamyang Sun</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.7 <date>2023</date>
+                <edition>v 1.0.8 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -73,7 +73,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-07-20T16:17:30.987Z" user="admin">20/07/2023 16:17:30</note>
+        <note type="lastUpdated" date-time="2023-07-20T16:19:13.298Z" user="admin">20/07/2023 16:19:13</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2020-03-16T15:04:03.28Z" user="line-tofte">2.h</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-06-10T09:50:51.422Z" user="line-tofte">Auto (update-contributors)</note>
@@ -127,6 +127,7 @@
         <note type="updated" update="text-version" value="1.0.6" date-time="2023-01-27T00:08:10.376Z" user="celso">Added missing folio ref at
           colophon</note>
           <note type="updated" update="text-version" value="1.0.7" date-time="2023-07-20T16:17:28.056Z" user="martina-cotter">Added pending links. Toh 112</note>
+          <note type="updated" update="text-version" value="1.0.8" date-time="2023-07-20T16:19:10.359Z" user="martina-cotter">Added pending links. Toh 112</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
