--- a/translations/kangyur/placeholders/091-036_toh639,879-the_incantation_of_the_one_hundred_and_eight_names_of_youthful_manjusri.xml
+++ b/translations/kangyur/placeholders/091-036_toh639,879-the_incantation_of_the_one_hundred_and_eight_names_of_youthful_manjusri.xml
@@ -20,10 +20,10 @@
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2022</date>
+                <edition>v 0.0.9 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.f">
+            <publicationStmt status="2.e">
                 <idno xml:id="UT22084-091-036"/>
                 <date/>
             </publicationStmt>
@@ -48,7 +48,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-09T08:22:42.564Z" user="admin">09/01/2023 08:22:42</note>
+                <note type="lastUpdated" date-time="2023-07-21T09:36:45.007Z" user="admin">21/07/2023 09:36:45</note>
                 <note type="updated" update="translation-status" value="4" date-time="2022-02-22T14:37:54.25Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-02-22T14:37:54.25Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-05-19T12:29:09.08Z" user="line-tofte">3</note>
@@ -61,6 +61,8 @@
                 <note type="updated" update="translation-status" value="2.f" date-time="2023-01-09T08:22:08.744Z" user="line-tofte">2.f</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2023-01-09T08:22:08.744Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.8" date-time="2023-01-09T08:22:37.036Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2023-07-21T09:36:40.706Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2023-07-21T09:36:40.706Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
