--- a/translations/kangyur/placeholders/091-039_toh642-the_hundred_and_eight_names_of_manjusri.xml
+++ b/translations/kangyur/placeholders/091-039_toh642-the_hundred_and_eight_names_of_manjusri.xml
@@ -16,10 +16,10 @@
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2022</date>
+                <edition>v 0.0.9 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.f">
+            <publicationStmt status="2.e">
                 <idno xml:id="UT22084-091-039"/>
                 <date/>
             </publicationStmt>
@@ -35,7 +35,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-10T08:59:57.38Z" user="admin">10/01/2023 08:59:57</note>
+                <note type="lastUpdated" date-time="2023-07-21T09:37:42.424Z" user="admin">21/07/2023 09:37:42</note>
                 <note type="updated" update="translation-status" value="4" date-time="2022-02-22T14:38:29.103Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-02-22T14:38:29.103Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-05-19T12:32:27.137Z" user="line-tofte">3</note>
@@ -49,6 +49,8 @@
                 <note type="updated" update="text-version" value="0.0.7" date-time="2023-01-09T08:24:25.841Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2023-01-10T08:59:51.859Z" user="line-tofte">2.f</note>
                 <note type="updated" update="text-version" value="0.0.8" date-time="2023-01-10T08:59:51.859Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2023-07-21T09:37:38.133Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2023-07-21T09:37:38.133Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
